@@ -53,6 +53,7 @@ dpkg (1.17.2) UNRELEASED; urgency=low
     the default might change in the future. Closes: #187019
   * Improve dpkg “Preparing to replace” and “Unpacking” progress messages.
     Closes: #32427, #71106
+  * Print the package version on main dpkg progress messages.
 
   [ Updated programs translations ]
   * German (Sven Joachim).
